--- a/SmartEatDemo/app/src/main/res/layout/profile_after_registration_frame.xml
+++ b/SmartEatDemo/app/src/main/res/layout/profile_after_registration_frame.xml
@@ -363,7 +363,7 @@
         <AutoCompleteTextView
             android:id="@+id/autoCompleteTextViewLevelOfPhysicalActivityAfter"
             android:layout_width="match_parent"
-            android:layout_height="69dp"
+            android:layout_height="match_parent"
             android:clickable="true"
             android:ellipsize="end"
             android:focusable="true"
