Изменения: Возможности переходов по нижней панели с разных фреймов. Небольшие корректировки dish_frame.xml, DishActivity.java, manual_search_results_frame.xml, ManualSearchResultsActivity.java, strings.xml.
Новое:
diary_frame.xml и DiaryActivity.java фрейм для дневника
diary.xml для отображения добавленного блюда в списке
magnifiter_icon.xml иконка лупы

--- a/SmartEatDemo/app/src/main/res/layout/diary_frame.xml
+++ b/SmartEatDemo/app/src/main/res/layout/diary_frame.xml
@@ -5,8 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ManualSearchResultsActivity">
-
+    tools:context=".DiaryActivity">
 
     <!-- Верхняя панель -->
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,24 +18,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.1">
 
-        <ImageButton
-            android:id="@+id/imageButtonBack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/back_icon"
-            android:background="@color/main"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5"
-            app:layout_constraintHorizontal_bias="0.05"/>
-
         <TextView
             android:id="@+id/textViewMainTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/main"
+            android:text="@string/diary"
             android:textColor="@color/white"
             android:textSize="34sp"
             android:textStyle="bold"
@@ -52,53 +38,39 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_bias="0.12"
+        app:layout_constraintVertical_bias="0.15"
         app:layout_constraintHorizontal_bias="0.2"
-        app:layout_constraintHeight_percent="0.08"
-        app:layout_constraintWidth_percent="0.7"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayoutEntranceNameOfDish"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:hintEnabled="true"
-        android:layout_weight="0.7"
-        android:layout_gravity="center"
-        android:layout_marginStart="15dp">
-
-        <EditText
-            android:id="@+id/editTextEntranceNameOfDish"
+        <TextView
+            android:id="@+id/textViewDailyCalorieIntake"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:focusable="true"
+            android:text="@string/daily_calorie_intake"
             android:textColor="@color/dark_text"
-            android:hint="@string/dish_name"/>
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_weight="0.4"
+            android:paddingStart="10dp" />
 
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <ImageButton
-        android:id="@+id/imageButtonSearch"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:src="@drawable/magnifier_icon"
-        android:background="@color/main"
-        android:layout_weight="0.3"
-        android:layout_gravity="center"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginTop="3dp"/>
+        <TextView
+            android:id="@+id/textViewDailyCalorieIntakeCount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/calories"
+            android:textColor="@color/gray"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_weight="0.6"
+            android:paddingEnd="10dp" />
 
     </LinearLayout>
 
 
-
-
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayoutListDish"
+        android:id="@+id/constraintLayoutListDiary"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_alignParentBottom="true"
@@ -116,11 +88,10 @@
             android:id="@+id/listViewDishes"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="3dp"
-            android:layout_marginBottom="3dp"/>
+            tools:layout_editor_absoluteX="-48dp"
+            tools:layout_editor_absoluteY="-177dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
     <!-- Нижняя панель навигации -->
@@ -128,7 +99,7 @@
         android:id="@+id/constraintLayoutButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/main"
+        android:background="@color/main_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -138,10 +109,10 @@
         <ImageButton
             android:id="@+id/imageButtonDiary"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:src="@drawable/diary_icon"
-            android:background="@color/main"
+            android:background="@color/main_dark"
             android:contentDescription="@string/logo_description"
             app:layout_constraintEnd_toStartOf="@+id/imageButtonHome"
             app:layout_constraintStart_toStartOf="parent"
@@ -155,7 +126,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:src="@drawable/home_icon"
-            android:background="@color/main_dark"
+            android:background="@color/main"
             android:contentDescription="@string/logo_description"
             app:layout_constraintStart_toEndOf="@+id/imageButtonDiary"
             app:layout_constraintEnd_toStartOf="@+id/imageButtonProfile"
