--- a/SmartEatDemo/app/src/main/res/layout/dish_frame.xml
+++ b/SmartEatDemo/app/src/main/res/layout/dish_frame.xml
@@ -45,23 +45,127 @@
             app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <TextView
-        android:id="@+id/textViewDishName"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:id="@+id/linearLayoutDish"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/dish_name"
-        android:textColor="@color/dark_text"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:gravity="center"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHeight_percent="0.145"
         app:layout_constraintVertical_bias="0.12"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintWidth_percent="0.82"/>
+        app:layout_constraintHorizontal_bias="0.5">
+
+    <TextView
+        android:id="@+id/textViewDishName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/dish_name"
+        android:textColor="@color/dark_text"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:paddingBottom="10dp"/>
+
+        <LinearLayout
+            android:id="@+id/linearLayoutCalories"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewCaloriesColon"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/calories_colon"
+                android:textColor="@color/dark_text"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:gravity="start"
+                android:layout_marginStart="65dp"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:id="@+id/textViewCaloriesCount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/calories"
+                android:textColor="@color/gray"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:gravity="end"
+                android:layout_marginEnd="65dp"
+                android:layout_weight="1"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayoutEating"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewEatingColon"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/eating_colon"
+                android:textColor="@color/dark_text"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:gravity="start"
+                android:layout_marginStart="65dp"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:id="@+id/textViewEatingName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/eating_name"
+                android:textColor="@color/gray"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:gravity="end"
+                android:layout_marginEnd="65dp"
+                android:layout_weight="1"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayoutDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/description_colon"
+                android:textColor="@color/dark_text"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:gravity="start"
+                android:layout_marginStart="65dp"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:id="@+id/textViewDescriptionText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/description"
+                android:textColor="@color/gray"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:gravity="end"
+                android:layout_marginEnd="65dp"
+                android:layout_weight="1"/>
+
+        </LinearLayout>
+
+
+
+    </LinearLayout>
 
 
     <Button
