--- a/SmartEatDemo/app/src/main/res/layout/manual_search_results_frame.xml
+++ b/SmartEatDemo/app/src/main/res/layout/manual_search_results_frame.xml
@@ -76,7 +76,10 @@
             android:ems="10"
             android:focusable="true"
             android:textColor="@color/dark_text"
-            android:hint="@string/dish_name"/>
+            android:hint="@string/dish_name"
+            android:scrollHorizontally="true"
+            android:ellipsize="end"
+            android:maxLines="1" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
